<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black_background"
    tools:context="com.nightonke.wowoviewpagerexample.GuidePageActivity1">

    <com.nightonke.wowoviewpager.WoWoViewPager
        android:id="@+id/wowo_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <View
        android:id="@+id/circle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_gray_blue_circle"
        />

    <RelativeLayout
        android:id="@+id/sub_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:id="@+id/blue_stick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_stick"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/orange_stick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_stick"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            tools:ignore="ContentDescription" />

        <com.nightonke.wowoviewpager.WoWoPathView
            android:id="@+id/path_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:wowo_pathColor="@android:color/white"
            app:wowo_pathWidth="2dp"
            app:wowo_dynamicPath="true"
            app:wowo_headImageSrc="@drawable/airplane"
            app:wowo_headImageWidth="90dp"
            />

        <ImageView
            android:id="@+id/little_cloud"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:src="@drawable/little_cloud"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/big_cloud"
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:src="@drawable/big_cloud"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="60dp"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/sun"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/sun"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="-100dp"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="-100dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/optimized"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:paddingBottom="80dp"
            />

        <ImageView
            android:id="@+id/music_stand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/music_stand"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitEnd"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/music_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/music_notes"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitEnd"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/nightonke"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/nightonke"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/presents"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nightonke"
            android:text="@string/presents"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|end"
            android:layout_centerHorizontal="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="-10dp"
            />

        <TextView
            android:id="@+id/wowo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="70dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/wowo"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:textStyle="bold"
            android:transformPivotX="-20px"
            android:rotation="-15"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/viewpager"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:transformPivotX="-20px"
            android:rotation="15"
            android:maxLines="1"
            />

        <FrameLayout
            android:id="@+id/nightonke_cloud"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/little_cloud"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nightonke"
                android:textColor="@color/light_blue"
                android:layout_gravity="center"
                android:paddingTop="40dp"
                android:gravity="center"
                />

        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>
